--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch>=2.2
-torchvision>=0.17
-timm>=0.9.12
-scikit-learn>=1.3
-matplotlib>=3.7
-numpy>=1.24
-pandas>=2.0
-tqdm>=4.66
+torch
+torchvision
+timm
+scikit-learn
+matplotlib
+numpy
+pandas
+tqdm
